@@ -6,6 +6,7 @@
  - issue #78 : add classes to convert (rotate) sets of coordinates
  - Redesign arrow pointing to destination, using RotationConverter and Coordinates classes
  - issue #125 : add property to close the line to Coordinates class
+ - remove unnecessary AndroidLocation conversion and try-catch in DetailsActivity and MainActivity
 
  v0.1.1 (released 04Dec2013)
  
